cabal-version:      3.14

-- Newer versions complain
name:               family
version:            0.2.0.0
synopsis:           Family stuff
homepage:           https://github.com/emberdart/family
license:            AGPL-3.0-only
author:             Ember Dart
maintainer:         cabal@emberdart.co.uk
category:           Genealogy
extra-doc-files:    CHANGELOG.md
build-type:         Simple

executable family
  main-is:            Main.hs
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base    ^>=4.22
    , gedcom  ^>=0.3.2
    , mtl     ^>=2.3.1
    , text    ^>=2.1.2

  hs-source-dirs:     src

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags
